<resources>
    <string name="app_name">Baby Food</string>

    <!-- button -->
    <string name="save">저장</string>

    <!-- menus -->
    <string name="menu_home">홈</string>
    <string name="menu_history">기록</string>

    <!-- Food -->
    <string name="food_title_hint">이유식 이름</string>

    <!-- Ingredient -->
    <string name="ingredient_list_title">재료</string>
    <string name="ingredient_title">재료</string>
    <string name="ingredient_gram">0</string>
    <string name="ingredient_gram_unit">%dg</string>
    <string name="ingredient_eat_gram">섭취량</string>
    <string name="ingredient_allergy_title">알레르기 반응</string>
    <string name="ingredient_allergy">알레르기</string>
    <string name="ingredient_emesis">구토</string>
    <string name="ingredient_diarrhea">설사</string>
    <string name="ingredient_comment_title">코멘트</string>
    <string name="ingredient_comment_hint">최대 200글자</string>

    <!-- transition name -->
    <string name="transition_collapsing_img">main_collapsing_img</string>

    <!-- common -->
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="remove">삭제</string>
    <string name="date_mm_dd">%1$s월 %2$s일</string>
    <string name="date_today">Today</string>
    <string name="add_food">추가</string>
</resources>
