<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="ingredient"
            type="com.jp.babyfood.data.entity.Ingredient" />

        <variable
            name="viewModel"
            type="com.jp.babyfood.ui.calendardetail.CalendarDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredient_title_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={ingredient.name}"
            android:textSize="@dimen/text_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/ingredient_expand_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ingredient_gram_edit"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredient_gram_edit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@={ingredient.gramStr}"
            android:textSize="@dimen/text_content"
            app:layout_constraintBaseline_toBaselineOf="@id/ingredient_expand_btn"
            app:layout_constraintLeft_toRightOf="@id/ingredient_title_edit"
            app:layout_constraintRight_toLeftOf="@id/ingredient_expand_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jp.babyfood.ui.views.ExpandButton
            android:id="@+id/ingredient_expand_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_expand_more_24px"
            app:layout_constraintBottom_toTopOf="@id/ingredient_more_wrapper"
            app:layout_constraintLeft_toRightOf="@id/ingredient_gram_edit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toggleOnClick="@={ingredient.expand}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredient_more_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:background="@{ingredient.expand ? @drawable/bg_row_ingredient : null}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredient_title_edit">

            <GridLayout
                android:id="@+id/ingredient_allergy_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:visibility="@{ingredient.expand ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@id/ingredient_remove_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/ingredient_allergy_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:checked="@={viewModel.food.allergy}"
                    android:text="@string/ingredient_allergy" />

                <CheckBox
                    android:id="@+id/ingredient_emesis_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:checked="@={viewModel.food.emesis}"
                    android:text="@string/ingredient_emesis" />

                <CheckBox
                    android:id="@+id/ingredient_diarrhea_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:checked="@={viewModel.food.diarrhea}"
                    android:text="@string/ingredient_diarrhea" />
            </GridLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ingredient_remove_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> viewModel.removeIngredient(ingredient)}"
                android:text="@string/remove"
                android:textColor="@color/primaryColor"
                android:textStyle="bold"
                android:visibility="@{ingredient.expand ? View.VISIBLE : View.GONE}"
                app:backgroundTint="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredient_allergy_radiogroup"
                app:rippleColor="#33AAAAAA" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>