<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewModel"
            type="com.jp.babyfood.ui.calendardetail.CalendarDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendar_detail_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/food_name_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_title_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:textSize="@dimen/text_title"
            app:layout_constraintBottom_toTopOf="@id/food_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/food_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_name_editor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/contentBackgroundColor">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_padding"
                    android:background="@drawable/bg_row_ingredient"
                    android:paddingTop="@dimen/default_padding"
                    android:paddingBottom="@dimen/padding_small"
                    app:layout_constraintBottom_toTopOf="@id/ingredient_list"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                        android:id="@+id/ingredient_list_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredient_list_title"
                        android:textSize="@dimen/text_subtitle"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/ingredient_add_btn"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ingredient_add_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_padding"
                        android:onClick="@{(view) -> viewModel.addIngredient()}"
                        android:src="@drawable/ic_add_circle_24px"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/ingredient_list_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredient_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    app:bind_items="@{viewModel.ingredients}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/ingredient_comment_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ingredient_comment_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_padding"
                    android:background="@drawable/bg_row_ingredient"
                    android:paddingTop="@dimen/default_padding"
                    android:paddingBottom="@dimen/padding_small"
                    android:text="@string/ingredient_comment_title"
                    android:textSize="@dimen/text_subtitle"
                    app:layout_constraintBottom_toTopOf="@id/ingredient_comment_edit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ingredient_list" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredient_comment_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:background="@color/baseBackgroundColor"
                    android:gravity="top"
                    android:hint="@string/ingredient_comment_hint"
                    android:maxLength="200"
                    android:minLines="5"
                    android:text="@={viewModel.food.comment}"
                    app:layout_constraintBottom_toTopOf="@id/ingredient_save_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ingredient_comment_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ingredient_save_btn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/default_padding"
                    android:onClick="@{view -> viewModel.saveFood()}"
                    android:padding="@dimen/padding_button"
                    android:text="@string/save"
                    android:textColor="@color/secondaryLightColor"
                    app:cornerRadius="@dimen/default_corner"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ingredient_comment_edit"
                    app:rippleColor="#33AAAAAA" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>